Code made maintainable

--- a/key-presser/key-presser.vcxproj
+++ b/key-presser/key-presser.vcxproj
@@ -127,7 +127,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="keySimulatorFunctions.cpp" />
+    <ClCompile Include="MacroManager.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="keySimulatorFunctions.h" />
+    <ClInclude Include="Macro.h" />
+    <ClInclude Include="MacroManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
