Fixed the bug where the macro got stuck when stopping and moved libraries to a separate file

--- a/key-presser/key-presser.vcxproj.filters
+++ b/key-presser/key-presser.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="keySimulatorFunctions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Libraries.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
