--- a/key-presser/key-presser.vcxproj
+++ b/key-presser/key-presser.vcxproj
@@ -133,6 +133,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="keySimulatorFunctions.h" />
+    <ClInclude Include="Libraries.h" />
     <ClInclude Include="Macro.h" />
     <ClInclude Include="MacroManager.h" />
   </ItemGroup>
